# Review

./: .gitignore  README.md
CodeReview/cuda-samples/: nvidia_tile_helpers.md
CodeReview/cuda-samples/.devcontainer/: Dockerfile  devcontainer.json
CodeReview/cuda-samples/gemm-extree-optimization/: gemm_blas.cu
CodeReview/cuda-samples/mergesort/: R-Ruling_Set.md
CodeReview/cuda-samples/mergesort/python/: find_r_ruling_set.py  (+1 more)
CodeReview/cuda-samples/radix-sort/: CMakeLists.txt  radix_sort.cpp
SlideReview/NVIDIA_GTC2023_FP_MixedPrecison/: test_sigmoid_fp8_err.m
hardware-design/High-Speed Function Approximation Using a Minimax Quadratic Interpolator/: README.md
hardware-design/High-Speed Function Approximation Using a Minimax Quadratic Interpolator/cpp_simulate/: CMakeLists.txt  build.bat
hardware-design/High-Speed Function Approximation Using a Minimax Quadratic Interpolator/cpp_simulate/include/: exp.h  fp.h  int_op.h  opcode.h
hardware-design/High-Speed Function Approximation Using a Minimax Quadratic Interpolator/cpp_simulate/src/: exp.cpp  not_used.cpp  rcp.cpp  sin.cpp
hardware-design/High-Speed Function Approximation Using a Minimax Quadratic Interpolator/search_coeff/: Remez2.m  RemezExample.m  log2_no_variant_talbe.txt  search_cos_coeff1.m  search_cos_coeff2.m  search_cos_coeff3.m  search_log2_coeff1.m  search_sin_coeff2.m  test_remez.m
hardware-design/High-Speed Function Approximation Using a Minimax Quadratic Interpolator/src/: Remez2.m  RemezExample.m  computecoeffs1.m  findmaxr2.m  fmaxsigmar.m  log2_div_approx.m  minmaxsol2.m
(+23 files in other folders)
